--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,16 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "type":"module",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Bugclroid",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.2",
